--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,9 @@ import Social from "./Social.astro"
 ---
 
 <footer>
-  <Social platform="GitHub" username="Ful4nito" />
-  <a href="https://www.linkedin.com/in/jonathan-baez-648934281/">Linkedin</a>
+  <p> Hola Mundo    [pie de pagina]</p>
+  <!-- <Social platform="GitHub" username="Ful4nito" /> -->
+  <!-- <a href="https://www.linkedin.com/in/jonathan-baez-648934281/">Linkedin</a> -->
 </footer>
 
 <style>
