--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,6 +21,16 @@ import Layout from "../layouts/Layout.astro";
         <p> [Primer commit desde termux] </p>
       </div>
       <br>
+      <!-- Hola -->
+      <div class="seccion">
+				<h2>Mi primer pagina con Astro.</h2>
+				<p>Este sitio nace como un proyecto personal y académico, desarrollado con Astro,
+				   un framework moderno para crear sitios rápidos y eficientes. Acá voy a ir recopilando todos mis apuntes, 
+				   proyectos y recursos que estaré juntando a lo largo de la carrera Ingenieria en Inteligencia Artificial. 
+				   La idea es tener todo organizado en un solo lugar y, por qué no, compartirlo con quien le pueda servir también.</p>
+			</div>
+      <br>
+
       <Footer />
     </div>
   </body>
