--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -7,16 +7,16 @@ import Layout from "../../../layouts/Layout.astro"
     <Header />
     <body>
         <div class="hoja">
-            <h2>ALGORITMOS Y ESTRUCTURAS DE DATOS</h2>
+            <h1>ALGORITMOS Y ESTRUCTURAS DE DATOS</h1>
             <div class="seccion">
-                <h3>Apuntes</h3>
+                <h2>Apuntes</h2>
             </div>
             <br>
             <div class="seccion">
-                <h3>Practicas</h3>
-                <div class="contenedor1">
-                    <div class="unidad">
-                        <h4>Unidad I</h4>
+                <h2>Practicas</h2>
+                <div class="contenedor-grande">
+                    <div class="contenedor-mediano">
+                        <h3>Unidad I</h3>
                         <ul class="materias">
                             <li><a href="/semestre2/B201/practica1/">Practica 01</a></li>
                             <li><a href="/semestre2/B201/practica2/">Practica 02</a></li>
@@ -26,8 +26,8 @@ import Layout from "../../../layouts/Layout.astro"
                             <li><a href="/semestre2/B201/practica6/">Practica 06</a></li>
                         </ul>
                     </div>
-                    <div class="unidad">
-                        <h4>Unidad II</h4>
+                    <div class="contenedor-mediano">
+                        <h3>Unidad II</h3>
                         <ul class="materias">
                             <li><a href="/semestre2/B201/practica7/">Practica 07</a></li>
                             <li><a href="/semestre2/B201/practica8/">Practica 08</a></li>
@@ -35,16 +35,15 @@ import Layout from "../../../layouts/Layout.astro"
                             <li><a href="/semestre2/B201/practica10/">Practica 10</a></li>
                         </ul>
                     </div>
-                    <div class="unidad">
-                        <h4>Unidad III</h4>
-                        <ul class="materias">
-                        </ul>
+                    <div class="contenedor-mediano">
+                        <h3>Unidad III</h3>
+                        <ul class="materias"></ul>
                     </div>
                 </div>
             </div>
             <br>
             <div class="seccion">
-                <h3>Notas</h3>
+                <h2>Notas</h2>
             </div>
             <br>
         </div>
