--- a/src/pages/mapa.astro
+++ b/src/pages/mapa.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
@@ -6,25 +7,27 @@ import Layout from "../layouts/Layout.astro";
 <Layout>
   <Header />
   <body>
-    <div class="hoja">
-      <div><h1>Mapa Curricular</h1></div>
+    <div class="hoja"> <!-- HOJA --> 
+      <h1>Mapa Curricular</h1>
 
-      <div class="contenedor1">
-        <div class="semestre">
-          <h2>PRIMER SEMESTRE</h2>
-            <ul class="materias">
-            <li><a href="/semestre1/B101/fundamentos-de-programacion">FUNDAMENTOS DE PROGRAMACIÓN</a></li>
+      <div class="seccion"> <!-- CONTENEDOR SECCION -->
+        <br>
+        <div class="contenedor-grande">  <!-- CONTENEDOR GRANDE DISPLAY FLEX -->
+          <div class="semestre"> <!-- Primero -->
+            <h2>PRIMER SEMESTRE</h2>
+            <ul class="lista-1">
+              <li><a href="/semestre1/B101/fundamentos-de-programacion">FUNDAMENTOS DE PROGRAMACIÓN</a></li>
               <li><a href="/semestre1/B102/matematicas-discretas">MATEMATICAS DISCRETAS</a></li>
               <li><a href="/semestre1/B103/comunicacion-oral-y-escrita">COMUNICACIÓN ORAL Y ESCRITA</a></li>
               <li><a href="/semestre1/B104/calculo">CALCULO</a></li>
               <li><a href="/semestre1/B105/mecanica-y-electromagnetismo">MECANICA Y ELECTROMAGNETISMO</a></li>
               <li><a href="/semestre1/B106/fundamentos-esonomicos">FUNDAMENTOS ECONOMICOS</a></li>
             </ul>
-        </div>
+          </div> <!-- Primero -->
 
-        <div class="semestre">
-          <h2>SEGUNDO SEMESTRE</h2>
-            <ul class="materias">
+          <div class="semestre">  <!-- Segundo -->
+            <h2>SEGUNDO SEMESTRE</h2>
+            <ul class="lista-1">
               <li><a href="/semestre2/B201/algoritmos-y-estructuras-de-datos">ALGORITMOS Y ESTRUCTURAS DE DATOS</a></li>
               <li><a href="/semestre2/B202/algebra-lineal">ALGEBRA LINEAL</a></li>
               <li><a href="/semestre2/B203/fundamentos-de-diseño-digital">FUNDAMENTOS DE DISEÑO DIGITAL</a></li>
@@ -32,11 +35,11 @@ import Layout from "../layouts/Layout.astro";
               <li><a href="/semestre2/B205/ingenieria-etica-y-sociedad">INGENIERIA, ETICA Y SOCIEDAD</a></li>
               <li><a href="/semestre2/B206/finanzas-empresariales">FINANZAS EMPRESARIALES</a></li>
             <ul/>
-        </div>
+          </div> <!-- Segundo -->
 
-        <div class="semestre">
-          <h2>TERCER SEMESTRE</h2>
-            <ul class="materias">
+          <div class="semestre">  <!-- Tercero -->
+            <h2>TERCER SEMESTRE</h2>
+            <ul class="lista-1">
               <li><a href="/semestre3/B301/analisis-y-diseño-de-algoritmos">ANÁLISIS Y DISEÑO DE ALGORITMOS</a></li>
               <li><a href="/semestre3/B302/paradigmas-de-programacion">PARADIGMAS DE PROGRAMACIÓN</a></li>
               <li><a href="/semestre3/B303/ecuaciones-diferenciales">ECUACIONES DIFERENCIALES</a></li>
@@ -44,23 +47,23 @@ import Layout from "../layouts/Layout.astro";
               <li><a href="/semestre3/B305/diseño-de-sistemas-digitales">DISEÑO DE SISTEMAS DIGITALES</a></li>
               <li><a href="/semestre3/B306/liderazgo-personal">LIDERAZGO PERSONAL</a></li>
             </ul>
-        </div>
+          </div> <!-- Tercero -->
 
-        <div class="semestre">
-          <h2>CUARTO SEMESTRE</h2>
-            <ul class="materias">
-                <li><a href="#">FUNDAMENTOS DE INTELIGENCIA ARTIFICIAL</a></li>
-                <li><a href="#">PROBABILIDAD Y ESTADÍSTICA</a></li>
-                <li><a href="#">MATEMÁTICAS AVANZADAS PARA LA INGENIERÍA</a></li>
-                <li><a href="#">TECNOLOGÍAS PARA EL DESARROLLO DE APLICACIONES WEB</a></li>
-                <li><a href="#">ANÁLISIS Y DISEÑO DE SISTEMAS</a></li>
-                <li><a href="#">PROCESAMIENTO DIGITAL DE IMÁGENES</a></li>
-              </ul>
-        </div>
-          
-        <div class="semestre">
-          <h2>QUINTO SEMESTRE</h2>
-            <ul class="materias">
+          <div class="semestre">  <!-- Cuarto -->
+            <h2>CUARTO SEMESTRE</h2>
+            <ul class="lista-1">
+              <li><a href="#">FUNDAMENTOS DE INTELIGENCIA ARTIFICIAL</a></li>
+              <li><a href="#">PROBABILIDAD Y ESTADÍSTICA</a></li>
+              <li><a href="#">MATEMÁTICAS AVANZADAS PARA LA INGENIERÍA</a></li>
+              <li><a href="#">TECNOLOGÍAS PARA EL DESARROLLO DE APLICACIONES WEB</a></li>
+              <li><a href="#">ANÁLISIS Y DISEÑO DE SISTEMAS</a></li>
+              <li><a href="#">PROCESAMIENTO DIGITAL DE IMÁGENES</a></li>
+            </ul>
+          </div> <!-- Cuarto -->
+            
+          <div class="semestre">  <!-- Quinto -->
+            <h2>QUINTO SEMESTRE</h2>
+            <ul class="lista-1">
               <li><a href="#">APRENDIZAJE DE MÁQUINA</a></li>
               <li><a href="#">VISIÓN ARTIFICIAL</a></li>
               <li><a href="#">TEORÍA DE LA COMPUTACIÓN</a></li>
@@ -68,11 +71,11 @@ import Layout from "../layouts/Layout.astro";
               <li><a href="#">ALGORITMOS BIOINSPIRADOS</a></li>
               <li><a href="#">TECNOLOGÍAS DE LENGUAJE NATURAL</a></li>
             </ul>
-        </div>
+          </div><!-- Quinto -->
 
-        <div class="semestre">
-          <h2>SEXTO SEMESTRE</h2>
-              <ul class="materias">
+          <div class="semestre">  <!-- Sexto -->
+            <h2>SEXTO SEMESTRE</h2>
+            <ul class="lista-1">
               <li><a href="#">CÓMPUTO PARALELO</a></li>
               <li><a href="#">REDES NEURONALES Y APRENDIZAJE PROFUNDO</a></li>
               <li><a href="#">INGENIERÍA DE SOFTWARE PARA SISTEMAS INTELIGENTES</a></li>
@@ -80,29 +83,34 @@ import Layout from "../layouts/Layout.astro";
               <li><a href="#">OPTATIVA A</a></li>
               <li><a href="#">OPTATIVA B</a></li>
             </ul>
-        </div> 
+          </div> <!-- Sexto -->
 
-        <div class="semestre">
-          <h2>SEPTIMO SEMESTRE</h2>
-              <ul class="materias">
+          <div class="semestre">  <!-- Septimo -->
+            <h2>SEPTIMO SEMESTRE</h2>
+            <ul class="lista-1">
               <li><a href="#">TRABAJO TERMINAL I</a></li>
               <li><a href="#">RECONOCIMIENTO DE VOZ</a></li>
               <li><a href="#">FORMULACIÓN Y EVALUACIÓN DE PROYECTOS INFORMÁTICOS</a></li>
               <li><a href="#">OPTATIVA C</a></li>
               <li><a href="#">OPTATIVA D</a></li>
             </ul>
-        </div> 
+          </div> <!-- Septimo -->
 
-        <div class="semestre">
-          <h2>OCTAVO SEMESTRE</h2>
-            <ul class="materias">
+          <div class="semestre">  <!-- Octavo -->
+            <h2>OCTAVO SEMESTRE</h2>
+            <ul class="lista-1">
               <li><a href="#">TRABAJO TERMINAL II</a></li>
               <li><a href="#">GESTIÓN EMPRESARIAL</a></li>
               <li><a href="#">ESTANCIA PROFESIONAL</a></li>
               <li><a href="#">DESARROLLO DE HABILIDADES SOCIALES PARA LA ALTA DIRECCIÓN</a></li>
             </ul>
-        </div> 
-      </div> 
-    </div>    
+          </div> <!-- Octavo -->
+        </div> <!-- CONTENEDOR GRANDE DISPLAY FLEX -->
+      </div> <!-- CONTENEDOR SECCION -->
+      <br>
+<!-- Seccion 2 -->
+
+      <Footer />
+    </div>   <!-- HOJA --> 
   </body>
 </Layout>
