--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
 	<Header />
+	<title>ESCOM IIA</title>
 	<body>
 		<div class="hoja">
 			<h1>
@@ -33,10 +33,10 @@ import Layout from "../layouts/Layout.astro";
 
 				<h3>Campo Laboral</h3>
 				<p>Este profesional podrá desempeñarse en el desarrollo y aplicación de la Inteligencia Artificial, en los ámbitos público y privado, 
-				   en campos ocupacionales como los que se enlistan a continuación:
-				   MEDICINA PERSONALIZADA: Procesos en el ámbito médico tales como el pre diagnóstico , análisis de imágenes médicas, análisis de historiales clínicos.
+				   en campos ocupacionales como los que se enlistan a continuación: <br>
+				   MEDICINA PERSONALIZADA: Procesos en el ámbito médico tales como el pre diagnóstico , análisis de imágenes médicas, análisis de historiales clínicos. <br>
                    ASISTENCIA Y MOVILIDAD PARA PERSONAS CON DISCAPACIDAD O DE LA TERCERA EDAD: Recursos que faciliten la movilidad y el acceso a servicios
-				   a través de diferentes medios, como: sillas de ruedas autónomas, guías inteligentes, traductores automáticos, generadores de texto, software de terapia y de acompañamiento.
+				   a través de diferentes medios, como: sillas de ruedas autónomas, guías inteligentes, traductores automáticos, generadores de texto, software de terapia y de acompañamiento. <br>
                    CIUDADES INTELIGENTES Y SOSTENIBLES: Sistemas inteligentes para mejorar la calidad de vida aplicados al transporte autónomo, identificación biométrica, 
 				   detección de fraude, prevención y detección de accidentes, tutores inteligentes, control de tráfico vehicular, monitoreo y alertamiento ambiental, protección civil.</p><br>
 
@@ -57,7 +57,6 @@ import Layout from "../layouts/Layout.astro";
 			</div>
 			<br>
 
-			<Footer>
 		</div>
 	</body>
 </Layout>
