--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -17,7 +17,7 @@ import Layout from "../../../layouts/Layout.astro"
                 <div class="contenedor-grande">
                     <div class="contenedor-mediano">
                         <h3>Unidad I</h3>
-                        <ul class="materias">
+                        <ul class="lista-secundaria">
                             <li><a href="/semestre2/B201/practica1/">Practica 01</a></li>
                             <li><a href="/semestre2/B201/practica2/">Practica 02</a></li>
                             <li><a href="/semestre2/B201/practica3/">Practica 03</a></li>
@@ -28,7 +28,7 @@ import Layout from "../../../layouts/Layout.astro"
                     </div>
                     <div class="contenedor-mediano">
                         <h3>Unidad II</h3>
-                        <ul class="materias">
+                        <ul class="lista-secundaria">
                             <li><a href="/semestre2/B201/practica7/">Practica 07</a></li>
                             <li><a href="/semestre2/B201/practica8/">Practica 08</a></li>
                             <li><a href="/semestre2/B201/practica9/">Practica 09</a></li>
@@ -37,7 +37,7 @@ import Layout from "../../../layouts/Layout.astro"
                     </div>
                     <div class="contenedor-mediano">
                         <h3>Unidad III</h3>
-                        <ul class="materias"></ul>
+                        <ul class="lista-secundaria"></ul>
                     </div>
                 </div>
             </div>
