--- a/src/pages/biblioteca.astro
+++ b/src/pages/biblioteca.astro
@@ -1,11 +1,11 @@
 ---
-import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
     <Header />
+    <title>Biblioteca</title>
     <body>
         <div class="hoja">
             <h1>Recursos digitales</h1>
@@ -17,7 +17,7 @@ import Layout from "../layouts/Layout.astro";
                 <div class="contenedor-grande">
                     <div class="contenedor-mediano">
                         <h3>Matematicas</h3>
-                        <ul class="lista-1">
+                        <ul class="lista-secundaria">
                             <li><a href="#">Libro 01</a></li>
                             <li><a href="#">Libro 02</a></li>
                             <li><a href="#">Libro 03</a></li>
@@ -27,7 +27,7 @@ import Layout from "../layouts/Layout.astro";
                     </div>
                     <div class="contenedor-mediano">
                         <h3>Programacion</h3>
-                        <ul class="lista-1">
+                        <ul class="lista-secundaria">
                             <li><a href="#">Libro 07</a></li>
                             <li><a href="#">Libro 08</a></li>
                             <li><a href="#">Libro 09</a></li>
@@ -36,7 +36,7 @@ import Layout from "../layouts/Layout.astro";
                     </div>
                     <div class="contenedor-mediano">
                         <h3>Electronica</h3>
-                        <ul class="lista-1">
+                        <ul class="lista-secundaria">
                             <li><a href="#">Libro 11</a></li>
                             <li><a href="#">Libro 12</a></li>
                         </ul>
@@ -56,7 +56,6 @@ import Layout from "../layouts/Layout.astro";
             </div>
             <br>
 
-            <Footer>
         </div>
     </body>
 </Layout>
