--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,18 +1,18 @@
 ---
-import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
     <Header />
+    <title>Blog</title>
     <body>
         <div class="hoja">
             <h1>Blog personal</h1>
             
             <div class="seccion">
                 <h2>Documentacion</h2>
-                    <ul class="lista-1">
+                    <ul class="lista-secundaria">
                         <li><a href="/posts/post-1/">Publicación 1</a></li>
                         <li><a href="/posts/post-2/">Publicación 2</a></li>
                         <li><a href="/posts/post-3/">Publicación 3</a></li>
@@ -31,7 +31,7 @@ import Layout from "../layouts/Layout.astro";
             <br>
 
             <div class="seccion">
-                <div class="lista-1">
+                <div class="lista-secundaria">
                     <h2>Configuraciones</h2>
                     <ul class="materias">
                         <li><a href="/posts/setup-c/">Setup para programar en C</a></li>
@@ -40,7 +40,6 @@ import Layout from "../layouts/Layout.astro";
             </div>
             <br>
 
-            <Footer>
         </div>
     </body>
 </Layout>
