--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,11 +46,10 @@ body {
 }
 
 .hoja {
-  margin-left: 3%;
-  margin-right: 3%;
-  margin-bottom: 4rem;
+  margin-left: 4%;
+  margin-right: 4%;
+  margin-bottom: 3rem;
   /*border: 1px groove var(--t1-black);*/
-  padding: 1%;
 }
 
 Header {
@@ -59,8 +58,8 @@ Header {
   align-items: center;
   height: 60px;
   padding: 20px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 40px;
+  padding-right: 40px;
   background-color: var(--t1-navbackground);
   border-bottom: 2px solid var(--t1-navborder);
 }
@@ -76,18 +75,12 @@ footer {
 }
 
 p {
-  padding-left: 1rem;
-  padding-right: 1rem;
-
   text-align: justify;
 
   /*border: 1px solid var(--t1-black);*/
 }
 
 ul {
-  padding-left: 1rem;
-  padding-right: 1rem;
-
   margin-bottom: .7rem;
 
   font-size: 1.5rem;
@@ -102,7 +95,7 @@ ul {
 /*                         HEADERS                          */
 /*============================ =============================*/
 h1 {
-  padding: 1rem;
+  padding-left: 1rem;
   
   font-size: 3rem;
   color: var(--t1-foreground);
@@ -110,40 +103,30 @@ h1 {
 }
 
 h2 {
-  padding-left: 1rem;  
-
   font-size: 2.5rem;
   color: var(--t1-bluedark);
   /*border: 1px solid var(--t1-black);*/
 }
 
 h3 {
-  padding-left: 1rem;
-
   font-size: 2rem;
   color: var(--t1-blue);
   /*border: 1px solid var(--t1-black);*/
 }
 
 h4 {
-  margin-left: 1rem;
-
   font-size: 1.8rem;
   color: var(--t1-blue);
   /*border: 1px solid var(--t1-black);*/
 }
 
 h5 {
-  padding-left: 1rem;
-
   font-size: 1.5rem;
   color: var(--t1-red);
   /*border: 1px solid var(--t1-black);*/
 }
 
 h6 {
-  padding-left: 1rem;
-
   font-size: 1..2rem;
   /*border: 1px solid var(--t1-black);*/
 }
@@ -213,27 +196,28 @@ h6 {
 /*==========================================================*/ 
 /*                          LINKS                           */
 /*==========================================================*/
-a {
+.lista-secundaria a {
   display: flex;
-  outline: none;
+  padding-left: 2% ;
+  padding-right: 2% ;
+
   text-decoration: none;
-  border-radius: 5px;
-  padding: 1px 8px 0;
+  border-radius: 4px;
   }
   
-a:link,
-a:visited { /*Color de enlace no visitado y visitado*/
+.lista-secundaria a:link,
+.lista-secundaria a:visited { /*Color de enlace no visitado y visitado*/
   color: var(--t1-foreground);
   }
   
-a:hover { /*Colores al colocar el cursor encima*/
+.lista-secundaria a:hover { /*Colores al colocar el cursor encima*/
   color: var(--t1-foreground);
-  background: var(--t1-background);
+  background: #15171b;
   }
 
-a:focus {/*Colores al hacer click en el enlace*/
+.lista-secundaria a:focus {/*Colores al hacer click en el enlace*/
   color: var(--t1-blue);
-  background: var(--t1-background);
+  background: #15171b;
   }
 
 
@@ -244,17 +228,20 @@ a:focus {/*Colores al hacer click en el enlace*/
 /*==========================================================*/
 .seccion{
   border-top: 3px solid var(--t1-gray);
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .semestre{
-  margin: 1rem;
-  padding: 1rem;
+  margin: 1%;
+  padding: 1%;
   
   flex-grow: 1;
   /*flex-basis: 45%;*/
 
   border-radius: 6px;
   border: 3px solid var(--t1-gray);
+
 }
 
 .contenedor-grande{
@@ -264,15 +251,12 @@ a:focus {/*Colores al hacer click en el enlace*/
 }
 
 .contenedor-mediano{
-  margin: 1rem;
-  padding-top: .5rem; /* OJO AQUI ESTO ROMPE  !!!!!!!!!!!*/
+  padding: 1%; /* OJO AQUI ESTO ROMPE  !!!!!!!!!!!*/
   
   flex-grow: 1;
-  flex-basis: 20%;
 
   border-radius: 6px;
-  border: 1px solid var(--t1-gray);
-
+  /*border: 1px solid var(--t1-gray);*/
 }
 
 
@@ -282,7 +266,7 @@ a:focus {/*Colores al hacer click en el enlace*/
 /*==========================================================*/ 
 /*                  HAMBURGUER Y NAV BAR                    */
 /*==========================================================*/
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 600px) {
   .nav-links {
     margin-left: 0em;
     display: block;
@@ -297,19 +281,3 @@ a:focus {/*Colores al hacer click en el enlace*/
   }
 
 }
-
-/* ======== MENOR A 851 PIXELES*/
-@media screen and (max-width: 850px) {
-
-  .contenedor-grande {
-    display: flex;
-    flex-flow: column wrap;
-  }
-
-  .semestre{
-    width: auto;
-  }
-
-
-}
-
