--- a/src/pages/semestre1/B101/fundamentos-de-programacion.astro
+++ b/src/pages/semestre1/B101/fundamentos-de-programacion.astro
@@ -1,10 +1,29 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Fundamentos de programacion</h2>
+        <div class="hoja">
+            <h1>Fundamentos de programacion</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Programación Estructurada</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Apuntadores, tipos de Datos Estructurados y funciones</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Manejo de Memoria Dinámica y Archivos</b>
+            </div>
+            <br>
+
+        </div>
     </body>
 </Layout>
