--- a/src/pages/semestre1/B103/comunicacion-oral-y-escrita.astro
+++ b/src/pages/semestre1/B103/comunicacion-oral-y-escrita.astro
@@ -1,10 +1,33 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Comunicacion Oral y Escrita</h2>
+        <div class="hoja">
+            <h1>Comunicacion Oral y Escrita</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Comunicación asertiva</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Comunicación oral</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Comunicación escrita</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Comunicación en el siglo XXI</b>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
