--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -9,11 +9,22 @@ import Layout from "../../../layouts/Layout.astro"
         <div class="hoja">
             <h1>ALGORITMOS Y ESTRUCTURAS DE DATOS</h1>
             <div class="seccion">
-                <h2>Apuntes</h2>
+                <h2>UNIDAD I</h2>
+                <b>Algoritmos Fundamentales</b>
             </div>
             <br>
             <div class="seccion">
-                <h2>Practicas</h2>
+                <h2>UNIDAD II</h2>
+                <b>Estructuras de datos lineales</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Estructuras de datos no lineales</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>PRACTICAS</h2>
                 <div class="contenedor-grande">
                     <div class="contenedor-mediano">
                         <h3>Unidad I</h3>
