--- a/src/pages/semestre2/B203/fundamentos-de-diseño-digital.astro
+++ b/src/pages/semestre2/B203/fundamentos-de-diseño-digital.astro
@@ -1,10 +1,33 @@
 ---
+import Header from "../../../components/Header.astro"
 import Layout from "../../../layouts/Layout.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Fundamentos de diseño digital</h2>
+        <div class="hoja">
+            <h1>Apuntes de Fundamentos de diseño digital</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Principios de diseño de Sistemas Digitales</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Tecnología y lenguajes de descripción de dispositivos lógicos programables</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Lógica Combinacional</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Elementos básicos de Memoria</b>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
