--- a/src/pages/semestre3/B306/liderazgo-personal.astro
+++ b/src/pages/semestre3/B306/liderazgo-personal.astro
@@ -1,10 +1,33 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Liderazgo Personal</h2>
+        <div class="hoja">
+            <h1>Liderazgo Personal</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Principios del liderazgo</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Interacción e influencia en relaciones colaborativas</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Conocimiento y tecnologías para la toma de decisiones</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Liderazgo adaptativo para el desarrollo de talento</b>
+            </div>
+            <br>
+        </div>  
     </body>
 </Layout>
