--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,44 +16,44 @@ import Layout from "../layouts/Layout.astro";
 
 				<h3>Objetivo</h3>
 				<p>Formar expertos capaces de desarrollar sistemas inteligentes utilizando diferentes metodologías en las diferentes 
-					 etapas de desarrollo y aplicando algoritmos en áreas como aprendizaje de máquina, procesamiento automático de lenguaje natural, 
-					 visión artificial y modelos bioinspirados para atender las necesidades de los diferentes sectores 
-					 de la sociedad a través de la generación de procesos y soluciones innovadoras.</p><br>
+				etapas de desarrollo y aplicando algoritmos en áreas como aprendizaje de máquina, procesamiento automático de lenguaje natural, 
+				visión artificial y modelos bioinspirados para atender las necesidades de los diferentes sectores 
+				de la sociedad a través de la generación de procesos y soluciones innovadoras.</p><br>
 
 				<h3>Perfil de Ingreso</h3>
 				<p>Los estudiantes que ingresen al Instituto Politécnico Nacional, en cualquiera de sus programas y niveles, 
-					deberán contar con los conocimientos y las habilidades básicas que garanticen un adecuado desempeño en el nivel al que solicitan su ingreso. 
-					Asimismo, deberán contar con las actitudes y valores necesarios para responsabilizarse de su proceso formativo y 
-					asumir una posición activa frente al estudio y al desarrollo de los proyectos y trabajos requeridos, coincidentes con el ideario y principios del IPN.</p><br>
+				deberán contar con los conocimientos y las habilidades básicas que garanticen un adecuado desempeño en el nivel al que solicitan su ingreso. 
+				Asimismo, deberán contar con las actitudes y valores necesarios para responsabilizarse de su proceso formativo y 
+				asumir una posición activa frente al estudio y al desarrollo de los proyectos y trabajos requeridos, coincidentes con el ideario y principios del IPN.</p><br>
 
 				<h3>Perfil de Egreso</h3>
 				<p>El egresado de la Ingeniería en Inteligencia Artificial se desempeñará colaborativamente en equipos multidisciplinarios en el análisis, diseño,
-					implementación, validación, implantación, supervisión y gestión de sistemas inteligentes, aplicando algoritmos en áreas como aprendizaje de máquina,
-					procesamiento automático de lenguaje natural, visión artificial y modelos bioinspirados; ejerciendo su profesión con liderazgo, ética y responsabilidad social.</p><br>
+				implementación, validación, implantación, supervisión y gestión de sistemas inteligentes, aplicando algoritmos en áreas como aprendizaje de máquina,
+				procesamiento automático de lenguaje natural, visión artificial y modelos bioinspirados; ejerciendo su profesión con liderazgo, ética y responsabilidad social.</p><br>
 
 				<h3>Campo Laboral</h3>
 				<p>Este profesional podrá desempeñarse en el desarrollo y aplicación de la Inteligencia Artificial, en los ámbitos público y privado, 
-				   en campos ocupacionales como los que se enlistan a continuación: <br>
-				   MEDICINA PERSONALIZADA: Procesos en el ámbito médico tales como el pre diagnóstico , análisis de imágenes médicas, análisis de historiales clínicos. <br>
-                   ASISTENCIA Y MOVILIDAD PARA PERSONAS CON DISCAPACIDAD O DE LA TERCERA EDAD: Recursos que faciliten la movilidad y el acceso a servicios
-				   a través de diferentes medios, como: sillas de ruedas autónomas, guías inteligentes, traductores automáticos, generadores de texto, software de terapia y de acompañamiento. <br>
-                   CIUDADES INTELIGENTES Y SOSTENIBLES: Sistemas inteligentes para mejorar la calidad de vida aplicados al transporte autónomo, identificación biométrica, 
-				   detección de fraude, prevención y detección de accidentes, tutores inteligentes, control de tráfico vehicular, monitoreo y alertamiento ambiental, protección civil.</p><br>
+				en campos ocupacionales como los que se enlistan a continuación: <br><br>
+				<b>MEDICINA PERSONALIZADA:<b/> Procesos en el ámbito médico tales como el pre diagnóstico , análisis de imágenes médicas, análisis de historiales clínicos. <br><br>
+                <b>ASISTENCIA Y MOVILIDAD PARA PERSONAS CON DISCAPACIDAD O DE LA TERCERA EDAD:<b/> Recursos que faciliten la movilidad y el acceso a servicios
+				a través de diferentes medios, como: sillas de ruedas autónomas, guías inteligentes, traductores automáticos, generadores de texto, software de terapia y de acompañamiento. <br><br>
+                <b>CIUDADES INTELIGENTES Y SOSTENIBLES:<b/> Sistemas inteligentes para mejorar la calidad de vida aplicados al transporte autónomo, identificación biométrica, 
+				detección de fraude, prevención y detección de accidentes, tutores inteligentes, control de tráfico vehicular, monitoreo y alertamiento ambiental, protección civil.</p><br>
 
 				<h3>Titulación</h3>
 				<p>En la Escuela Superior de Cómputo, de conformidad con el Reglamento de Titulación Profesional vigente se considerarán 9 opciones para titulación 
-					profesional en la carrera de Ing. en Sistemas Computacionales (ISC), Ing. en Inteligencia Artificial (IIA), Lic. en Ciencia de Datos (LCD) e 
-					Ing. en Sistemas Automotrices (ISISA), debiendo cumplir cada una de ellas con requisitos y actividades propios: <br><br>
+				profesional en la carrera de Ing. en Sistemas Computacionales (ISC), Ing. en Inteligencia Artificial (IIA), Lic. en Ciencia de Datos (LCD) e 
+				Ing. en Sistemas Automotrices (ISISA), debiendo cumplir cada una de ellas con requisitos y actividades propios: <br><br>
 
-                    1. Proyecto de investigación <br>
-                    2. Tesis <br>
-					3. Memoria de experiencia profesional <br>
-					4. Examen de conocimiento por áreas <br>
-					5. Créditos de posgrado <br>
-					6. Seminario de titulación <br>
-					7. Escolaridad <br>
-					8. Curricular <br>
-					9. Práctica profesional</p>
+                1. Proyecto de investigación <br>
+                2. Tesis <br>
+				3. Memoria de experiencia profesional <br>
+				4. Examen de conocimiento por áreas <br>
+				5. Créditos de posgrado <br>
+				6. Seminario de titulación <br>
+				7. Escolaridad <br>
+				8. Curricular <br>
+				9. Práctica profesional</p>
 			</div>
 			<br>
 
