--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -9,9 +9,9 @@ import Layout from "../layouts/Layout.astro";
   <title>About</title>
   <body>
     <div class="hoja">
-        <h1>Brazo</h1>
+        <h1>Proyectos personales</h1>
         <div class="seccion">
-            <h2>Informacion</h2>
+            <h2>Brazo 6Gdl</h2>
             <p>El presente proyecto abarca el diseño, desarrollo y construcción de tres sistemas robóticos con
                aplicaciones diversas en el ámbito de la robótica moderna. El primero es un robot tipo brazo robótico
                de 6 grados de libertad (6GDL), diseñado para realizar tareas de manipulación precisa, ideal para
@@ -26,7 +26,7 @@ import Layout from "../layouts/Layout.astro";
         </div>
         <br>
         <div class="seccion">
-            <h2>Sumo</h2>
+            <h2>Sumo Autonomo</h2>
             <p>Por último, se presenta un robot sumo autónomo, capaz de detectar y enfrentar a su oponente de
                 manera independiente dentro de un área de combate, demostrando el uso de sensores, lógica de control
                 y toma de decisiones. Estos tres proyectos permiten explorar diferentes ramas de la robótica como
