--- a/src/pages/semestre1/B102/matematicas-discretas.astro
+++ b/src/pages/semestre1/B102/matematicas-discretas.astro
@@ -1,10 +1,33 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Matematicas Discretas</h2>
+        <div class="hoja">
+            <h1>Matematicas Discretas</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Lógica</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Teoría de Conjuntos</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Números Enteros</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Estructuras Discretas para la Computación</b>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
