--- a/src/pages/semestre1/B104/calculo.astro
+++ b/src/pages/semestre1/B104/calculo.astro
@@ -1,10 +1,38 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Calculo</h2>
+        <div class="hoja">
+            <h1>Calculo</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Funciones algebraicas y trascendentes</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Límites de funciones y continuidad</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Derivada y sus aplicaciones</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Técnicas de integración</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>La integral definida y sus aplicaciones</b>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
