--- a/src/pages/semestre1/B105/mecanica-y-electromagnetismo.astro
+++ b/src/pages/semestre1/B105/mecanica-y-electromagnetismo.astro
@@ -1,10 +1,28 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Mecanica y ElectroMagnetismo</h2>
+        <div class="hoja">
+            <h1>Mecanica y ElectroMagnetismo</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Mecánica</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Electrostática</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Magnetismo</b>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
