--- a/src/pages/semestre1/B106/fundamentos-esonomicos.astro
+++ b/src/pages/semestre1/B106/fundamentos-esonomicos.astro
@@ -1,10 +1,38 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h1>Apuntes de Fundamentos Economicos</h1>
+        <div class="hoja">
+            <h1>Fundamentos Economicos</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Economía</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Microeconomía</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Teoría del Mercado</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Macroeconomía</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Economía Internacional y sustentabilidad</b>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
