--- a/src/pages/semestre2/B202/algebra-lineal.astro
+++ b/src/pages/semestre2/B202/algebra-lineal.astro
@@ -1,10 +1,33 @@
 ---
+import Header from "../../../components/Header.astro"
 import Layout from "../../../layouts/Layout.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Algebra Lineal</h2>
+        <div class="hoja">
+            <h1>Apuntes de Algebra Lineal</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Sistemas de Ecuaciones Lineales</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Espacios Vectoriales</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Transformaciones Lineales</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Valores y Vectores Propios</b>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
