--- a/src/pages/semestre2/B204/calculo-multivariable.astro
+++ b/src/pages/semestre2/B204/calculo-multivariable.astro
@@ -1,10 +1,33 @@
 ---
+import Header from "../../../components/Header.astro"
 import Layout from "../../../layouts/Layout.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Calculo Multivariable</h2>
+        <div class="hoja">
+            <h1>Calculo Multivariable</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Vectores y funciones vectoriales</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Derivadas Parciales</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Integrales múltiples</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Teoremas de Integración</b>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
