--- a/src/pages/semestre2/B205/ingenieria-etica-y-sociedad.astro
+++ b/src/pages/semestre2/B205/ingenieria-etica-y-sociedad.astro
@@ -1,10 +1,33 @@
 ---
+import Header from "../../../components/Header.astro"
 import Layout from "../../../layouts/Layout.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Etica</h2>
+        <div class="hoja">
+            <h1>Ingenieria, ética y sociedad</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Desarrollo histórico del conocimiento científico y tecnológico</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Revoluciones Industriales; tecnología e impacto</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Ingeniería y sociedad</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Ética e ingeniería en inteligencia artificial</b>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
