--- a/src/pages/semestre3/B301/analisis-y-diseño-de-algoritmos.astro
+++ b/src/pages/semestre3/B301/analisis-y-diseño-de-algoritmos.astro
@@ -1,10 +1,33 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Analisis y diseño de Algoritmos</h2>
+        <div class="hoja">
+            <h1>Analisis y diseño de Algoritmos</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Contextualización y notaciones</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Estrategias de diseño deterministas</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Estrategias de diseño no deterministas</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Introducción a la teoría de la complejidad</b>
+            </div>
+            <br>
+        </div>  
     </body>
 </Layout>
