--- a/src/pages/semestre3/B302/paradigmas-de-programacion.astro
+++ b/src/pages/semestre3/B302/paradigmas-de-programacion.astro
@@ -1,10 +1,28 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de paradigmas de programacion</h2>
+        <div class="hoja">
+            <h1>Paradigmas de programacion</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Introducción a los lenguajes de programación y sus paradigmas</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Programación Orientada a Objetos</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Lenguajes multiparadigma y de uso específico</b>
+            </div>
+            <br>
+        </div>  
     </body>
 </Layout>
