--- a/src/pages/semestre3/B303/ecuaciones-diferenciales.astro
+++ b/src/pages/semestre3/B303/ecuaciones-diferenciales.astro
@@ -1,10 +1,33 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de ecuaciones diferenciales</h2>
+        <div class="hoja">
+            <h1>Ecuaciones diferenciales</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Ecuaciones diferenciales de primer orden</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Ecuaciones diferenciales de orden superior</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Transformada de Laplace</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Transformada de Fourier</b>
+            </div>
+            <br>
+        </div>  
     </body>
 </Layout>
