--- a/src/pages/semestre3/B304/bases-de-datos.astro
+++ b/src/pages/semestre3/B304/bases-de-datos.astro
@@ -1,10 +1,38 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de bases de datos</h2>
+        <div class="hoja">
+            <h1>Bases de datos</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Sistemas de bases de datos</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Modelado de bases de datos</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Modelo relacional</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Diseño de bases de datos relacionales y normalización</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD V</h2>
+                <b>Lenguaje SQL</b>
+            </div>
+            <br>
+        </div>  
     </body>
 </Layout>
