--- a/src/pages/semestre3/B305/diseño-de-sistemas-digitales.astro
+++ b/src/pages/semestre3/B305/diseño-de-sistemas-digitales.astro
@@ -1,10 +1,38 @@
 ---
 import Layout from "../../../layouts/Layout.astro"
+import Header from "../../../components/Header.astro"
 ---
 
 <Layout>
-    <a href="/mapa/">Mapa</a>
+    <Header />
     <body>
-        <h2>Apuntes de Diseño de sistemas digitales</h2>
+        <div class="hoja">
+            <h1>Diseño de sistemas digitales</h1>
+            <div class="seccion">
+                <h2>UNIDAD I</h2>
+                <b>Registros</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD II</h2>
+                <b>Diseño de sistemas digitales</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD III</h2>
+                <b>Contadores</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD IV</h2>
+                <b>Memorias</b>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>UNIDAD V</h2>
+                <b>Máquina de estado algorítmica</b>
+            </div>
+            <br>
+        </div>  
     </body>
 </Layout>
