--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -34,12 +34,12 @@ import Layout from "../../../layouts/Layout.astro"
                             <li><a href="/semestre2/B201/practica3/">Practica 03</a></li>
                             <li><a href="/semestre2/B201/practica4/">Practica 04</a></li>
                             <li><a href="/semestre2/B201/practica5/">Practica 05</a></li>
-                            <li><a href="/semestre2/B201/practica6/">Practica 06</a></li>
                         </ul>
                     </div>
                     <div class="contenedor-mediano">
                         <h3>Unidad II</h3>
                         <ul class="lista-secundaria">
+                            <li><a href="/semestre2/B201/practica6/">Practica 06</a></li>
                             <li><a href="/semestre2/B201/practica7/">Practica 07</a></li>
                             <li><a href="/semestre2/B201/practica8/">Practica 08</a></li>
                             <li><a href="/semestre2/B201/practica9/">Practica 09</a></li>
@@ -48,7 +48,13 @@ import Layout from "../../../layouts/Layout.astro"
                     </div>
                     <div class="contenedor-mediano">
                         <h3>Unidad III</h3>
-                        <ul class="lista-secundaria"></ul>
+                        <ul class="lista-secundaria">
+                            <li><a href="/semestre2/B201/practica11/">Practica 11</a></li>
+                            <li><a href="/semestre2/B201/practica12/">Practica 12</a></li>
+                            <li><a href="/semestre2/B201/practica13/">Practica 13</a></li>
+                            <li><a href="/semestre2/B201/practica14/">Practica 14</a></li>
+                            <li><a href="/semestre2/B201/practica15/">Practica 15</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
